--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,5 +31,5 @@ jobs:
           REGISTRY_URL: ${{ secrets.REGISTRY_URL }}
         run: docker push $REGISTRY_URL/mp_linksammlung:alpha
 
-      #- name: Portainer Webhook - Update Service
-      #  run: curl --request POST ${{ secrets.PORTAINER_WEBHOOK }}  
+      - name: Portainer Webhook - Update Service
+        run: curl --request POST ${{ secrets.PORTAINER_WEBHOOK }}  
